examples/test/testpolicy4967.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4967
  namespace: namespace263
spec:
  podSelector:
    matchLabels:
      key45: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value25
      podSelector:
        matchLabels:
          key37: value16
          key48: value1
          key35: value43
